<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".GraphSettingsFragment">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="16dp"
        android:layoutDirection="rtl"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/interpolator_switch">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_sinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_radiobtn" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_cosinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cos_radiobtn" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_giperbola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giper_radiobtn" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_radio_btn" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch1"
        style="@style/Base.TextAppearance.AppCompat.Widget.Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/switch_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/interpolator_switch"
        style="@style/Base.TextAppearance.AppCompat.Widget.Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/interpolator_switch"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

</androidx.constraintlayout.widget.ConstraintLayout>