<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:elevation="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <dmitrybelykh.study.customviewtry.LinearGraph
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="32dp"
            app:piv_color="@color/graphColor"
            app:piv_integer="5" />
    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="makeOtherGraph"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_sinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_radiobtn" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_cosinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cos_radiobtn" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_giperbola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giper_radiobtn" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_radio_btn" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch1"
        style="@style/Base.TextAppearance.AppCompat.Widget.Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="changeColors"
        android:text="@string/switch_text"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/interpolator_switch"
        style="@style/Base.TextAppearance.AppCompat.Widget.Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="interpolatorSwitch"
        android:text="@string/interpolator_switch"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>